# ccc

./: .gitignore  Cargo.toml  Readme.md  a.pu  db.json  swagger.yaml
book/src/: Introduction.md  config.md  dynamic-mybatis.md  summary.md  symbol-dictionary.md
examples/: main
examples/simple-config/: config.toml
examples/simple-config/server/: server.toml
examples/simple-config/server/modules/staff/: controllers.toml  dtos.toml  entity.toml
resource/handlebars/java/: java.hbs  java.mustache
resource/handlebars/swagger2puml/: puml.mustache
src/: app_option.rs  database.rs  dynamic.rs  hbs_test.rs  main.rs  mustache_test.rs  plantuml.rs  swagger.json  test.rs  typings.d.json  user.d.json  user.json  user.toml
src/app_option/: api.rs  controller.rs  dto.rs  module.rs
src/database/: module_table.rs
src/dynamic/: dynamic_module_controller.rs
src/plantuml/: code_generator.rs  generator.rs  model.rs
src/utils/: path_util.rs
templates/: index.html
templates/ng-alain/components/form/: test.json  typing.d.json
templates/ng-alain/components/form-item/: typing.d.json
templates/ng-alain/components/group/: typing.d.json
tests/src/: a.ts
