[package]
name = "cc"
version = "0.1.0"
edition = "2021"
include = ["/src","src/templates","templates"]
  
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
console = "0.14.1"
dialoguer ="0.8.0"
indicatif="0.16.2"
serde_json = "1.0.68"
jsonschema = "0.12.1"
jsonschema-valid = "0.4.0"
toml = "0.5"
serde = "1.0"
openapi="0.1.5"
handlebars = "4.1.3"
env_logger = "0.9.0"
serde_derive = "1.0.130"
mustache = "0.9.0"
clap = "2.33.3"
rocket = "0.5.0-rc.1"
figment = "0.10.6"
log = "0.4"
fast_log="1.3"
bigdecimal = "0.2"
rbatis =  { version = "2.0" } 
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
